gstdvbvideosink.c
@@ -197,6 +197,9 @@ GST_STATIC_PAD_TEMPLATE (
 #ifdef HAVE_H264
 	"video/x-h264, "
 		VIDEO_CAPS "; "
+	"video/x-h264, "
+		"parsed = (boolean) true, "
+		"alignment = (string) nal; "
 #endif
 #ifdef HAVE_H263
 	"video/x-h263, "
